# postfinder-dev-search

./: .gitignore  JOB.md  README.md  apidoc.md  launch.md  modal_app.py  pyproject.toml  server_local.py
scripts/: com.postfinder.embed.daemon.plist  com.postfinder.embed.plist  setup_daemon.sh  setup_prod.sh  start_server.sh
src/: client.py  demo_app.py  example.py  models.py
src/embeddings/: Dockerfile  generate.py  models.py  requirements.txt
